--- a/index.html
+++ b/index.html
@@ -94,9 +94,9 @@
             <h2>Fenerbahçe S.K. – Real Madrid</h2>
             <img src="images/fener-real.png" alt="Fenerbahçe S.K. – Real Madrid">
             <div class="event-info">
-                <p>Trendyol Süper Lig 4. Hafta Karşılaşması</p>
+                <p>UEFA Şampiyonlar Ligi 1. Hafta Karşılaşması</p>
                 <p>Ülker Stadyumu Fenerbahçe Şükrü Saracoğlu Spor Kompleksi</p>
-                <p>30 Ağustos 2024, 21:00</p>
+                <p>30 Eylül 2024, 21:00</p>
             </div>
             <a href="bilet-satin-al.html" id="purchaseButton" class="button">Bilet Al</a>
             <div class="ticket-count">Kalan Bilet: <span id="remaining-tickets">125</span></div>
